--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -222,6 +222,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:ems="10"
+        android:maxLength="20"
         android:hint="@string/add_post_description_hint"
         android:inputType="textPersonName"
         android:textColor="#00FFFFFF"
