--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -67,7 +67,7 @@
         android:layout_marginBottom="10dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/delete_mood"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
