--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/add_post_greeting"
         android:textSize="@dimen/default_font_size"
         app:layout_constraintBottom_toTopOf="@+id/emotionRadioGroup"
@@ -26,6 +26,7 @@
         android:id="@+id/emotionRadioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="@+id/greetingView"
         app:layout_constraintStart_toStartOf="@+id/greetingView"
@@ -199,28 +200,16 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/cancel_button"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        style="@style/WhiteText"
-        android:background="@android:color/transparent"
-        android:textAllCaps="false"
-        android:text="@string/add_post_cancel_button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <Button
         android:id="@+id/done_button"
         style="@style/WhiteText"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp"
         android:background="@android:color/transparent"
         android:text="@string/add_post_done_button"
         android:textAllCaps="false"
+        android:textColor="@drawable/button_pressed"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -229,7 +218,7 @@
         style="@style/WhiteText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:background="@null"
         android:ems="10"
         android:hint="@string/add_post_description_hint"
@@ -330,10 +319,10 @@
         android:id="@+id/addPictureButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:adjustViewBounds="true"
         android:background="@null"
         android:scaleType="fitXY"
-        android:adjustViewBounds="true"
         android:scaleX="1"
         app:layout_constraintEnd_toEndOf="@+id/timeInputLayout"
         app:layout_constraintStart_toStartOf="@+id/dateInputLayout"
@@ -371,21 +360,23 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/social_spinner"
             android:layout_alignParentLeft="false"
+            android:adjustViewBounds="true"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
             android:scaleType="fitXY"
-            android:src="@drawable/spinner_bar"
-            android:layout_alignTop="@+id/social_spinner"
-            android:adjustViewBounds="true"
-            android:scaleY="0.7"/>
+            android:scaleY="0.7"
+            android:src="@drawable/spinner_bar" />
 
     </RelativeLayout>
 
     <RelativeLayout
         android:id="@+id/locationInputLayout"
         android:layout_width="0dp"
-        android:layout_height="39dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
         app:layout_constraintEnd_toEndOf="@+id/socialSpinnerLayout"
         app:layout_constraintStart_toStartOf="@+id/socialSpinnerLayout"
         app:layout_constraintTop_toBottomOf="@+id/socialSpinnerLayout">
@@ -395,7 +386,7 @@
             android:id="@+id/locationText"
             style="@style/InputButtonText"
             android:layout_width="85dp"
-            android:layout_height="33dp"
+            android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:background="@drawable/input_button_white"
             android:gravity="center"
@@ -404,22 +395,40 @@
         <EditText
             android:id="@+id/locationEditText"
             style="@style/WhiteText"
-            android:layout_width="299dp"
-            android:layout_height="33dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_alignTop="@+id/locationText"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="false"
-            android:layout_marginStart="85dp"
-            android:layout_marginLeft="0dp"
+            android:layout_marginStart="83dp"
+            android:layout_marginLeft="-2dp"
             android:layout_marginTop="0dp"
             android:layout_toRightOf="@+id/locationText"
-            android:background="@drawable/input_button_right"
+            android:background="@drawable/button_right_long"
             android:clickable="true"
+            android:inputType="text"
+            android:maxLines="1"
             android:ems="10"
             android:gravity="center"
             android:textSize="15dp" />
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/cancel_button"
+        style="@style/WhiteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/transparent"
+        android:text="@string/add_post_cancel_button"
+        android:textAllCaps="false"
+        android:textColor="@drawable/button_pressed"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/locationInputLayout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
