--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="color_white">#FFFFFFFF</color>
     <color name="transparent_background">#60FFFFFF</color>
     <color name="button_color">#FF9494</color>
+    <color name="selected_color">#40000000</color>
 </resources>
