Minor changes on the design of content of mood list

--- a/app/src/main/res/layout/mood_list_content.xml
+++ b/app/src/main/res/layout/mood_list_content.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:id="@+id/emoji"
         android:layout_width="85dp"
-        android:layout_height="62dp"
+        android:layout_height="61dp"
         android:background="#CE2D2D"
         android:contentDescription="emoji"
         android:padding="10dp"
@@ -21,10 +21,12 @@
         android:layout_weight="1"
         android:background="@color/color_happy"
         android:fontFamily="@font/abeezee"
+        android:gravity="center_vertical"
         android:padding="10dp"
         android:text="Date"
+        android:textAlignment="center"
         android:textColor="@color/color_white"
-        android:textSize="24sp"></TextView>
+        android:textSize="22sp"></TextView>
 
     <TextView
         android:id="@+id/time"
@@ -33,9 +35,10 @@
         android:layout_weight="1"
         android:background="@color/color_surprised"
         android:fontFamily="@font/abeezee"
-        android:padding="10dp"
+        android:gravity="center_vertical"
         android:text="Time"
+        android:textAlignment="center"
         android:textColor="@color/color_white"
-        android:textSize="24sp"></TextView>
+        android:textSize="22sp"></TextView>
 
 </LinearLayout>
