--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -224,6 +224,7 @@
         android:hint="@string/add_post_description_hint"
         android:inputType="textPersonName"
         android:textColorHint="@color/color_white"
+        android:maxLength="@integer/max_char_length"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@+id/addPictureButton"
         app:layout_constraintStart_toStartOf="@+id/addPictureButton"
