--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,22 +19,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:id="@+id/userNameInputLayout"
+        android:id="@+id/userInputLayout"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/user_profile"
         app:layout_constraintTop_toBottomOf="@+id/user_profile">
 
 
         <TextView
             android:id="@+id/userText"
             style="@style/InputButtonText"
-            android:layout_width="102dp"
+            android:layout_width="85dp"
             android:layout_height="match_parent"
             android:layout_centerVertical="true"
             android:background="@drawable/input_button_white"
@@ -49,15 +49,16 @@
             android:layout_alignTop="@+id/userText"
             android:layout_alignParentStart="true"
             android:layout_alignParentBottom="false"
-            android:layout_marginStart="57dp"
+            android:layout_marginStart="83dp"
+            android:layout_marginLeft="-2dp"
             android:layout_marginTop="0dp"
             android:layout_toRightOf="@+id/userText"
-            android:background="@drawable/input_button_right"
+            android:background="@drawable/button_right_long"
             android:clickable="true"
             android:ems="10"
-            android:focusable="false"
             android:gravity="center"
-            android:inputType="date"
+            android:inputType="text"
+            android:maxLines="1"
             android:textSize="15dp" />
 
     </RelativeLayout>
