LinearLayout to constraint of OwnMood, fixed NavBar

--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -205,7 +205,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
         android:background="@android:color/transparent"
         android:text="@string/add_post_done_button"
         android:textAllCaps="false"
@@ -361,8 +361,6 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/social_spinner"
-            android:layout_alignParentLeft="false"
             android:adjustViewBounds="true"
             android:paddingLeft="0dp"
             android:paddingRight="0dp"
@@ -420,7 +418,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
         android:background="@android:color/transparent"
         android:text="@string/add_post_cancel_button"
         android:textAllCaps="false"
