--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
     <color name="transparent_background">#60FFFFFF</color>
     <color name="button_color">#FF9494</color>
     <color name="selected_color">#40000000</color>
+    <color name="navBar_color">#9CB5C3</color>
 </resources>
