--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
         android:background="@android:color/transparent"
         android:text="@string/add_post_done_button"
         android:textAllCaps="false"
@@ -150,7 +150,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
         android:background="@android:color/transparent"
         android:text="@string/add_post_cancel_button"
         android:textAllCaps="false"
