--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="default_font_size">20sp</dimen>
     <dimen name="default_left_padding">15dp</dimen>
     <dimen name="input_button_font_size">15dp</dimen>
+    <dimen name="navBar_distance">60dp</dimen>
 </resources>
