--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -116,6 +116,7 @@
         android:gravity="start|top"
         android:inputType="textMultiLine"
         android:textSize="15dp"
+        android:maxLength="100"
         app:layout_constraintEnd_toEndOf="@+id/birthDateLayout"
         app:layout_constraintStart_toStartOf="@+id/birthDateLayout"
         app:layout_constraintTop_toBottomOf="@+id/birthDateLayout" />
