--- a/app/src/main/res/layout/mood_list_content.xml
+++ b/app/src/main/res/layout/mood_list_content.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:tag="BottomSwipeView"
-        android:background="#ff0000"
+        android:background="@color/transparent_background"
         android:id="@+id/bottom_wrapper"
         android:layout_width="80dp"
         android:weightSum="1"
@@ -16,6 +16,7 @@
         <ImageView
             android:id="@+id/delete_event"
             android:src="@drawable/ic_delete"
+            android:background="@null"
             android:layout_width="80dp"
             android:layout_height="match_parent" />
 
