--- a/app/src/main/res/layout/fragment_add_post.xml
+++ b/app/src/main/res/layout/fragment_add_post.xml
@@ -358,7 +358,7 @@
             android:spinnerMode="dropdown" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewFriends"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
