--- a/app/src/main/res/layout/fragment_friends_moods.xml
+++ b/app/src/main/res/layout/fragment_friends_moods.xml
@@ -1,10 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:orientation="vertical">
+
+    <Button
+        android:id="@+id/show_on_map_button_friends"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="0"
+        android:background="@drawable/button_design"
+        android:fontFamily="@font/abeezee"
+        android:gravity="left|center_vertical"
+        android:paddingLeft="@dimen/default_left_padding"
+        android:text="Show on map"
+        android:textAllCaps="false"
+        android:textColor="@color/color_angry"
+        android:textColorHighlight="@color/color_surprised"
+        android:textSize="@dimen/default_font_size"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <RelativeLayout
+        android:id="@+id/filterSpinnerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
+        android:layout_weight="0"
+        android:paddingTop="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/mood_list_friends"
+        app:layout_constraintEnd_toEndOf="@+id/show_on_map_button_friends"
+        app:layout_constraintStart_toStartOf="@+id/show_on_map_button_friends"
+        app:layout_constraintTop_toBottomOf="@+id/show_on_map_button_friends">
 
-</layout>
+        <Spinner
+            android:id="@+id/filter_spinner_friends"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:background="@null"
+            android:baselineAligned="false"
+            android:dropDownVerticalOffset="15dp"
+            android:overlapAnchor="false"
+            android:popupBackground="@drawable/blur_background"
+            android:spinnerMode="dropdown" />
+
+        <ImageView
+            android:id="@+id/imageViewFriends"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignTop="@+id/social_spinner"
+            android:layout_alignParentLeft="false"
+            android:adjustViewBounds="true"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/spinner_bar" />
+
+    </RelativeLayout>
+
+    <ListView
+        android:id="@+id/mood_list_friends"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="@+id/filterSpinnerLayout"
+        app:layout_constraintStart_toStartOf="@+id/filterSpinnerLayout"
+        app:layout_constraintTop_toBottomOf="@+id/filterSpinnerLayout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
