--- a/app/src/main/res/layout/mood_list_content.xml
+++ b/app/src/main/res/layout/mood_list_content.xml
@@ -16,6 +16,7 @@
         <ImageView
             android:id="@+id/delete_event"
             android:src="@drawable/ic_delete"
+            android:padding="10dp"
             android:background="@null"
             android:layout_width="80dp"
             android:layout_height="match_parent" />
@@ -30,7 +31,7 @@
         <ImageView
             android:id="@+id/emoji"
             android:layout_width="85dp"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:background="#CE2D2D"
             android:contentDescription="emoji"
             android:padding="10dp"
@@ -40,7 +41,7 @@
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@color/color_happy"
             android:fontFamily="@font/abeezee"
@@ -55,7 +56,7 @@
         <TextView
             android:id="@+id/time"
             android:layout_width="wrap_content"
-            android:layout_height="61dp"
+            android:layout_height="60dp"
             android:layout_weight="1"
             android:background="@color/color_surprised"
             android:fontFamily="@font/abeezee"
