--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -76,6 +76,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="@dimen/navBar_distance"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/filterSpinnerLayout"
         app:layout_constraintStart_toStartOf="@+id/filterSpinnerLayout"
         app:layout_constraintTop_toBottomOf="@+id/filterSpinnerLayout" />
