--- a/app/src/main/res/layout/mood_list_content_friends.xml
+++ b/app/src/main/res/layout/mood_list_content_friends.xml
@@ -1,33 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/swipe_event"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <LinearLayout
-        android:tag="BottomSwipeView"
-        android:background="@color/transparent_background"
-        android:id="@+id/bottom_wrapper_friends"
-        android:layout_width="80dp"
-        android:weightSum="1"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/delete_event_friends"
-            android:src="@drawable/ic_delete"
-            android:padding="10dp"
-            android:background="@null"
-            android:layout_width="80dp"
-            android:layout_height="match_parent" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:background="#ffffff"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/emoji_friends"
@@ -88,6 +64,6 @@
                 android:textColor="@color/color_white"
                 android:textSize="18sp"></TextView>
         </LinearLayout>
-    </LinearLayout>
+</LinearLayout>
 
-</com.daimajia.swipe.SwipeLayout>
+
