--- a/app/src/main/res/layout/fragment_own_moods.xml
+++ b/app/src/main/res/layout/fragment_own_moods.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/show_on_map_button_friends"
+        android:id="@+id/show_on_map_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -37,13 +37,13 @@
         android:layout_marginEnd="16dp"
         android:layout_weight="0"
         android:paddingTop="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/mood_list_friends"
-        app:layout_constraintEnd_toEndOf="@+id/show_on_map_button_friends"
-        app:layout_constraintStart_toStartOf="@+id/show_on_map_button_friends"
-        app:layout_constraintTop_toBottomOf="@+id/show_on_map_button_friends">
+        app:layout_constraintBottom_toTopOf="@+id/mood_list"
+        app:layout_constraintEnd_toEndOf="@+id/show_on_map_button"
+        app:layout_constraintStart_toStartOf="@+id/show_on_map_button"
+        app:layout_constraintTop_toBottomOf="@+id/show_on_map_button">
 
         <Spinner
-            android:id="@+id/filter_spinner_friends"
+            android:id="@+id/filter_spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -58,7 +58,7 @@
             android:spinnerMode="dropdown" />
 
         <ImageView
-            android:id="@+id/imageViewFriends"
+            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/social_spinner"
@@ -72,7 +72,7 @@
     </RelativeLayout>
 
     <ListView
-        android:id="@+id/mood_list_friends"
+        android:id="@+id/mood_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
