--- a/app/src/main/res/layout/friend_list_content.xml
+++ b/app/src/main/res/layout/friend_list_content.xml
@@ -25,12 +25,12 @@
     </LinearLayout>
 
     <LinearLayout
-        android:background="#ffffff"
+        android:background="@null"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
-            android:id="@+id/date"
+            android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_weight="1"
@@ -38,10 +38,12 @@
             android:fontFamily="@font/abeezee"
             android:gravity="center_vertical"
             android:padding="10dp"
+            android:paddingStart="16dp"
             android:text="Name"
             android:textAlignment="textStart"
             android:textColor="@color/color_white"
-            android:textSize="22sp"
+            android:textSize="30sp"
+            android:maxLength="20"
             tools:ignore="RtlCompat"/>
 
     </LinearLayout>
