--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,7 +24,7 @@
         <item name="android:textSize">@dimen/input_button_font_size</item>
     </style>
 
-    <style name="user_profile">
+    <style name="drop_shadow">
         <item name="android:textSize">48sp</item>
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:shadowColor">#40000000</item>
@@ -32,5 +32,17 @@
         <item name="android:shadowDx">0</item>
         <item name="android:shadowDy">7</item>
         <item name="android:shadowRadius">15</item>
+    </style>
+
+    <style name="FullscreenTheme" parent="AppTheme">
+        <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
+        <item name="android:windowActionBarOverlay">true</item>
+        <item name="android:windowBackground">@null</item>
+        <item name="metaButtonBarStyle">?android:attr/buttonBarStyle</item>
+        <item name="metaButtonBarButtonStyle">?android:attr/buttonBarButtonStyle</item>
+    </style>
+
+    <style name="FullscreenActionBarStyle" parent="Widget.AppCompat.ActionBar">
+        <item name="android:background">@color/black_overlay</item>
     </style>
 </resources>
