--- a/app/src/main/res/layout/fragment_friends.xml
+++ b/app/src/main/res/layout/fragment_friends.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="16dp"
         android:gravity="center_vertical"
         android:text="Friends"
-        android:textAppearance="@style/user_profile"
+        android:textAppearance="@style/drop_shadow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/followView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="@+id/friends_view"
@@ -33,8 +34,9 @@
         <TextView
             android:id="@+id/searchView"
             style="@style/InputButtonText"
+            android:textSize="20dp"
             android:layout_width="100dp"
-            android:layout_height="40dp "
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
             android:background="@drawable/input_button_white"
             android:gravity="center"
@@ -67,21 +69,48 @@
         style="@style/WhiteText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:text="Friends List"
-        app:layout_constraintStart_toStartOf="@+id/searchInputLayout"
-        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />
+        app:layout_constraintBottom_toTopOf="@+id/friend_list"
+        app:layout_constraintStart_toStartOf="@+id/follow_request_button"
+        app:layout_constraintTop_toBottomOf="@+id/follow_request_button" />
 
     <ListView
         android:id="@+id/friend_list"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         android:layout_marginBottom="@dimen/navBar_distance"
         android:dividerHeight="-0.5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/friendView" />
+        app:layout_constraintTop_toBottomOf="@+id/friendView">
+
+    </ListView>
+
+    <ImageButton
+        android:id="@+id/follow_request_button"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="@null"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toTopOf="@+id/friendView"
+        app:layout_constraintStart_toStartOf="@+id/followView"
+        app:layout_constraintTop_toBottomOf="@+id/followView"
+        app:srcCompat="@drawable/follow_request" />
+
+    <TextView
+        android:id="@+id/followView"
+        style="@style/WhiteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:text="Follow Requests"
+        app:layout_constraintBottom_toTopOf="@+id/follow_request_button"
+        app:layout_constraintStart_toStartOf="@+id/searchInputLayout"
+        app:layout_constraintTop_toBottomOf="@+id/searchInputLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
