--- a/app/src/main/res/layout/friend_list_content.xml
+++ b/app/src/main/res/layout/friend_list_content.xml
@@ -40,6 +40,7 @@
             android:padding="10dp"
             android:paddingStart="16dp"
             android:text="Name"
+            android:textAppearance="@style/drop_shadow"
             android:textAlignment="textStart"
             android:textColor="@color/color_white"
             android:textSize="30sp"
