--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="button_color">#FF9494</color>
     <color name="selected_color">#40000000</color>
     <color name="navBar_color">#9CB5C3</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
